// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavButtons Logged In should render the component 1`] = `
<DocumentFragment>
  <div
    class="css-1l9jkg9"
  >
    <div
      class="css-1dghb8x"
    >
      <div
        class="css-wjzosl"
      >
        <svg
          class="css-sw18ee"
          fill="none"
          height="16"
          overrides="[object Object]"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.022 16-5.844-5.844a4.9 4.9 0 0 1-1.556.9 5.5 5.5 0 0 1-1.889.322c-1.6 0-2.955-.556-4.066-1.667C.556 8.6 0 7.26 0 5.69c0-1.57.556-2.911 1.667-4.022C2.777.556 4.126 0 5.71 0c1.57 0 2.908.556 4.011 1.667 1.104 1.11 1.656 2.452 1.656 4.022 0 .637-.104 1.252-.311 1.844a5.64 5.64 0 0 1-.934 1.667L16 15.022l-.978.978Zm-9.31-5.956c1.2 0 2.221-.425 3.066-1.277.844-.852 1.266-1.878 1.266-3.078S9.622 3.463 8.778 2.61C7.933 1.76 6.91 1.333 5.71 1.333c-1.215 0-2.248.426-3.1 1.278-.852.852-1.278 1.878-1.278 3.078s.426 2.226 1.278 3.078c.852.852 1.885 1.277 3.1 1.277Z"
            fill="#696969"
          />
        </svg>
      </div>
      <input
        aria-describedby="icon-placement-at"
        class="css-57m4xd"
        id="icon-placement"
        placeholder="Search times.co.uk"
        type="text"
      />
    </div>
  </div>
  <nav
    class="sc-htpNat dBqzbP css-yl1oeq"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <button
        class="sc-bdVaJa kZEdtz css-jsjf38"
        data-testid="button"
        type="button"
      >
        <p
          class="sc-bwzfXH iMVHoe css-18mb4bh"
        >
          Sections
        </p>
      </button>
      <button
        class="sc-bdVaJa kZEdtz css-jsjf38"
        data-testid="button"
        type="button"
      >
        <p
          class="sc-bwzfXH iMVHoe css-18mb4bh"
        >
          My account
        </p>
      </button>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`NavButtons Logged Out should render the component 1`] = `
<DocumentFragment>
  <div
    class="css-5qb4r1"
    style="background-color: rgb(29, 29, 27);"
  >
    <div
      style="display: flex;"
    >
      <button
        class="css-5kf7f9"
        data-testid="button"
        type="button"
      >
        <span
          class="css-1kfwj8t"
        >
          Log in
        </span>
      </button>
      <div
        style="margin: 4px;"
      />
      <button
        class="css-f5vstw"
        data-testid="button"
        type="button"
      >
        <span
          class="css-1kfwj8t"
        >
          Subscribe
        </span>
      </button>
    </div>
  </div>
  <div
    class="css-1djk6be"
  >
    <div
      class="css-1dghb8x"
    >
      <div
        class="css-wjzosl"
      >
        <svg
          class="css-sw18ee"
          fill="none"
          height="16"
          overrides="[object Object]"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15.022 16-5.844-5.844a4.9 4.9 0 0 1-1.556.9 5.5 5.5 0 0 1-1.889.322c-1.6 0-2.955-.556-4.066-1.667C.556 8.6 0 7.26 0 5.69c0-1.57.556-2.911 1.667-4.022C2.777.556 4.126 0 5.71 0c1.57 0 2.908.556 4.011 1.667 1.104 1.11 1.656 2.452 1.656 4.022 0 .637-.104 1.252-.311 1.844a5.64 5.64 0 0 1-.934 1.667L16 15.022l-.978.978Zm-9.31-5.956c1.2 0 2.221-.425 3.066-1.277.844-.852 1.266-1.878 1.266-3.078S9.622 3.463 8.778 2.61C7.933 1.76 6.91 1.333 5.71 1.333c-1.215 0-2.248.426-3.1 1.278-.852.852-1.278 1.878-1.278 3.078s.426 2.226 1.278 3.078c.852.852 1.885 1.277 3.1 1.277Z"
            fill="#696969"
          />
        </svg>
      </div>
      <input
        aria-describedby="icon-placement-at"
        class="css-57m4xd"
        id="icon-placement"
        placeholder="Search times.co.uk"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;
